--- a/views/front/etiket.ejs
+++ b/views/front/etiket.ejs
@@ -88,7 +88,8 @@
                                                         </td>
                                                     </tr>
                                                 </table>
-                                        </div>                                        </div>
+                                        </div>                                        
+                                    </div>
                                     </div>
                                     
                                 </a>
