--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -40,25 +40,23 @@
                         </div>
 
                         <div class="p-4 space-y-3">
-
-                            <div class="row">
-
+                            <div class="row" style="margin-left: 10vw;">
                                 <div class="col-md-4 col-sm-4 col-xs-4" style="width: 33%;">
                                     <div class="flex items-center space-x-4">
-                                        <ion-icon style="padding-left: 7vw;" name="share-social-outline" class="text-2xl"></ion-icon>
-                                        <span class="text-xl">3</span>
+                                        <ion-icon name="share-social-outline"></ion-icon>
+                                        <span class="text-sm">3</span>
                                     </div>
                                 </div>
                                 <div class="col-md-4 col-sm-4 col-xs-4" style="width: 33%;">
                                     <div class="flex items-center space-x-4">
-                                        <ion-icon style="padding-left: 7vw;" name="heart-outline" class="text-2xl"></ion-icon>
-                                        <span class="text-xl"> 3 </span>
+                                        <ion-icon name="heart-outline"></ion-icon>
+                                        <span class="text-sm"> 3 </span>
                                     </div>
                                 </div>
                                 <div class="col-md-4 col-sm-4 col-xs-4" style="width: 33%;">
                                     <div class="flex items-center space-x-4">
-                                        <ion-icon style="padding-left: 7vw;" name="chatbubble-ellipses-outline" class="text-2xl"></ion-icon>
-                                        <span class="text-xl"> <%= konu.comment.length %>  </span>
+                                        <ion-icon name="chatbubble-ellipses-outline"></ion-icon>
+                                        <span class="text-sm"> <%= konu.comment.length %>  </span>
                                     </div>
                                 </div>
                             </div>
