--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -14,7 +14,7 @@
 
         
     </style>
-    <div class="main_content" id="app">
+    <div class="main_content">
         <div class="container">
             <div class="lg:flex lg:space-y-10">
                 <div class="lg:w-3/4 lg:px-20 space-y-12">
@@ -144,6 +144,8 @@
             </div>
 
         </div>
+        <a @click="konuEkle()" style="color: white;" hidden class="bg-blue-600 flex h-9 items-center justify-center rounded-lg text-white px-12 font-semibold">
+            Paylaş </a>
         <div id="create-post-modal" class="create-post" uk-modal>
             <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical rounded-lg p-0 lg:w-5/12 relative shadow-2xl uk-animation-slide-bottom-small">
 
@@ -180,35 +182,4 @@
             </div>
         </div>
     </div>
-
-    <script>
-        new Vue({
-            el: "#app",
-            data: {
-                title: "",
-                tag: "",
-                konu: false
-            },
-            methods: {
-                acKapa() {
-                    if (this.konu == false) {
-                        this.konu = true
-                    } else {
-                        this.konu = false
-                    }
-                },
-                konuEkle() {
-                    axios.post("/sozluk/konuekle", {
-                        title: this.title,
-                        tag: this.tag
-                    }).then(response => {
-                        if (response.data.status == true) {
-                            setInterval(() => {
-                                window.location.reload()
-                            }, 1000);
-                        }
-                    })
-                }
-            }
-        })
-    </script>
+    
