--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -33,11 +33,11 @@
 
                         </div>
 
-                        <div class="p-4 space-y-3">
+                        <!-- <div class="p-4 space-y-3">
                             <div class="bg-gray-100 rounded-full relative dark:bg-gray-800 border-t" uk-toggle="target: #create-post-modal">
                                 <input placeholder="Bir şeyler yaz" class="bg-transparent max-h-10 shadow-none px-5">
                             </div>
-                        </div>
+                        </div> -->
 
                         <div class="p-4 space-y-3">
                             <!-- <div class="row" style="margin-left: 8vw;">
