--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -133,7 +133,7 @@
             <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical rounded-lg p-0 lg:w-5/12 relative shadow-2xl uk-animation-slide-bottom-small">
 
                 <div class="text-center py-4 border-b">
-                    <h3 class="text-lg font-semibold"> Sözlüğe konu ekliyorsunuz </h3>
+                    <h3 class="text-lg font-semibold"> Konuya yorum ekliyorsunuz </h3>
                     <button class="uk-modal-close-default bg-gray-100 rounded-full p-2.5 m-1 right-2" type="button" uk-close uk-tooltip="title: Close ; pos: bottom ;offset:7"></button>
                 </div>
                 <div class="flex flex-1 items-start space-x-4 p-5">
