--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -61,7 +61,7 @@
                                 </div>
                             </div> -->
 
-                            <div class="border-t py-4 space-y-4 dark:border-gray-600">
+                            <div class="border-t py-4 space-y-4 dark:border-gray-600" style="width: 100%; height: 600px; overflow-y: scroll;">
                                 <% konu.comment.forEach(element => { %>
                                     <div class="flex">
                                         <div class="w-10 h-10 rounded-full relative flex-shrink-0">
