--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -9,30 +9,23 @@
     <div class="main_content">
         <div class="container">
             <div class="lg:flex lg:space-y-10">
-                <div class="lg:w-3/4 lg:px-20 space-y-12">
-                    <br><br>
-                    <div class="bg-white shadow border border-gray-100 rounded-lg dark:bg-gray-900 lg:mx-0 uk-animation-slide-bottom-small">
+                <div class="flex flex-1 items-center space-x-4 uk-sticky" uk-sticky="offset:60" style="z-index: 99999; background-color: white;">
+                    <a href="#">
+                        <img src="../../../front/images/avatars/avatar-2.jpg" class="bg-gray-200 border border-white rounded-full w-10 h-10">
+                    </a>
+                    <div class="flex-1 font-semibold capitalize">
+                        <h2 class="text-3xl font-semibold" style="text-transform: capitalize;">
+                            <%= konu.title %>
+                        </h2>
 
-                        <!-- post header-->
-                        <div class="flex justify-between items-center lg:p-4 p-2.5">
-                            <div class="flex flex-1 items-center space-x-4">
-                                <a href="#">
-                                    <img src="../../../front/images/avatars/avatar-2.jpg" class="bg-gray-200 border border-white rounded-full w-10 h-10">
-                                </a>
-                                <div class="flex-1 font-semibold capitalize">
-                                    <h2 class="text-3xl font-semibold" style="text-transform: capitalize;">
-                                        <%= konu.title %>
-                                    </h2>
-
-                                    
-                                    <div class="text-gray-700 flex items-center space-x-2">
-                                        Abdullah Bektaş | <%= moment(konu.createdAt,"ddd MMM DD YYYY HH:mm:ss GMT Z'").fromNow(true) %> önce
-                                    </div>
-                                </div>
-                            </div>
-
+                        
+                        <div class="text-gray-700 flex items-center space-x-2">
+                            Abdullah Bektaş | <%= moment(konu.createdAt,"ddd MMM DD YYYY HH:mm:ss GMT Z'").fromNow(true) %> önce
                         </div>
-
+                    </div>
+                </div>
+                <div class="lg:w-3/4 lg:px-20 space-y-12">
+                    <div class="bg-white shadow border border-gray-100 rounded-lg dark:bg-gray-900 lg:mx-0 uk-animation-slide-bottom-small">
                         <!-- <div class="p-4 space-y-3">
                             <div class="bg-gray-100 rounded-full relative dark:bg-gray-800 border-t" uk-toggle="target: #create-post-modal">
                                 <input placeholder="Bir şeyler yaz" class="bg-transparent max-h-10 shadow-none px-5">
@@ -61,7 +54,7 @@
                                 </div>
                             </div> -->
 
-                            <div class="border-t py-4 space-y-4 dark:border-gray-600" style="width: 100%; height: 600px; overflow-y: scroll;">
+                            <div class="border-t py-4 space-y-4 dark:border-gray-600" style="width: 100%; height: 80vh; overflow-y: scroll;">
                                 <% konu.comment.forEach(element => { %>
                                     <div class="flex">
                                         <div class="w-10 h-10 rounded-full relative flex-shrink-0">
