--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -9,7 +9,7 @@
     <div class="main_content">
         <div class="container">
             <div class="lg:flex lg:space-y-10">
-                <div class="flex flex-1 items-center space-x-4 uk-sticky" uk-sticky="offset:60" style="z-index: 99999; background-color: white;">
+                <div class="flex flex-1 items-center space-x-4 uk-sticky" uk-sticky="offset:60" style="z-index: 99999; background-color: white;" id="gizle">
                     <a href="#">
                         <img src="../../../front/images/avatars/avatar-2.jpg" class="bg-gray-200 border border-white rounded-full w-10 h-10">
                     </a>
@@ -23,6 +23,19 @@
                     </div>
                 </div>
                 <div class="lg:w-3/4 lg:px-20 space-y-12">
+                    <div class="flex flex-1 items-center space-x-4 uk-sticky" uk-sticky="offset:60" style="z-index: 99999; background-color: white;" id="son">
+                        <a href="#">
+                            <img src="../../../front/images/avatars/avatar-2.jpg" class="bg-gray-200 border border-white rounded-full w-10 h-10">
+                        </a>
+                        <div class="flex-1 font-semibold capitalize">
+                            <h3 class="text-lg font-semibold">
+                                <%= konu.title %>
+                            </h3>
+                            <p class="text-sm text-gray-400 mb-2"> Yazar: <span data-href="%40tag-dev.html">Abdullah Bektaş</span> |
+                                <%= moment(konu.createdAt,"ddd MMM DD YYYY HH:mm:ss GMT Z'").fromNow(true) %> önce </span>
+                            </p>
+                        </div>
+                    </div>
                     <div class="bg-white shadow border border-gray-100 rounded-lg dark:bg-gray-900 lg:mx-0 uk-animation-slide-bottom-small">
                         <div class="p-4 space-y-3">
                             <div class="border-t py-4 space-y-4 dark:border-gray-600" style="width: 100%; height: 70vh; overflow-y: scroll;">
