--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -91,7 +91,8 @@
                                                         </td>
                                                     </tr>
                                                 </table>
-                                        </div>                                        </div>
+                                        </div>                                        
+                                    </div>
                                     </div>
                                     
                                 </a>
