--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -44,7 +44,7 @@
                                             <img src="../../../front/images/avatars/avatar-2.jpg" alt="" class="absolute h-full rounded-full w-full">
                                         </div>
                                         <div>
-                                            <div class="text-gray-700 py-2 px-3 rounded-md bg-gray-100 relative lg:ml-5 ml-2 lg:mr-12  dark:bg-gray-800 dark:text-gray-100">
+                                            <div class="py-2 px-3 rounded-md relative lg:ml-5 ml-2 lg:mr-12">
                                                 <p class="leading-6" style="font-size: 15pt;">
                                                     <%= element.yorum %>
                                                 </p>
