--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -150,9 +150,13 @@
         <div id="create-post-modal" class="create-post" uk-modal>
             <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical rounded-lg p-0 lg:w-5/12 relative shadow-2xl uk-animation-slide-bottom-small">
 
-                <div class="text-center py-4 border-b">
-                    <h3 class="text-lg font-semibold"> Sözlüğe konu ekliyorsunuz </h3>
+                <div class="text-center py-4 border-b" v-if="yyy == null">
+                    <h3 class="text-lg font-semibold"> Sözlüğe konu ekliyorsunuz. </h3>
                     <button class="uk-modal-close-default bg-gray-100 rounded-full p-2.5 m-1 right-2" type="button" uk-close uk-tooltip="title: Close ; pos: bottom ;offset:7"></button>
+                </div>
+                <div class="text-center py-4 border-b" style="background-color: #03A9F4" v-if="yyy == true">
+                    <h3 class="text-lg font-semibold" style="color: white;"> Yorumunuz başarıyla eklendi. </h3>
+                    <!-- <button class="uk-modal-close-default bg-gray-100 rounded-full p-2.5 m-1 right-2" type="button" uk-close uk-tooltip="title: Close ; pos: bottom ;offset:7"></button> -->
                 </div>
                 <div class="flex flex-1 items-start space-x-4 p-5">
                     <img src="../../../front/images/avatars/avatar-2.jpg" class="bg-gray-200 border border-white rounded-full w-11 h-11">
