--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -49,11 +49,30 @@
                                                     <%= element.yorum %>
                                                 </p>
                                             </div>
-                                            <div class="text-sm flex items-center space-x-3 mt-2 ml-5">
-                                                <p style="text-align: right;">
-                                                    <a href="#" class="text-1xl" style="text-align: right;"> <i class="uil-heart"></i> </a>
-                                                </p>
-                                            </div>
+                                            <div class="row" style="margin-left: 2vw;">
+                                                <table>
+                                                    <tr>
+                                                        <td>
+                                                            <div class="flex items-center">
+                                                                <ion-icon class="text-2xl" name="heart-outline"></ion-icon>
+                                                                <span class="text-sm">22</span>
+                                                            </div>
+                                                        </td>
+                                                        <td>
+                                                            <div class="flex items-center">
+                                                                <ion-icon style="padding-left: 20vw;" name="share-social-outline" class="text-2xl"></ion-icon>
+                                                                <span class="text-sm">22</span>
+                                                            </div>
+                                                        </td>
+                                                        <td>
+                                                            <div class="flex items-center">
+                                                                <ion-icon style="padding-left: 20vw;" class="text-2xl" name="trash-outline"></ion-icon>
+                                                                <span class="text-sm"></span>
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                </table>
+                                        </div>     
                                         </div>
                                     </div>
                                     <% }) %>
