--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -54,13 +54,13 @@
                                                     <tr>
                                                         <td>
                                                             <div class="flex items-center">
-                                                                <ion-icon class="text-2xl" name="heart-outline"></ion-icon>
+                                                                <ion-icon name="share-social-outline" class="text-2xl"></ion-icon>
                                                                 <span class="text-sm">22</span>
                                                             </div>
                                                         </td>
                                                         <td>
                                                             <div class="flex items-center">
-                                                                <ion-icon style="padding-left: 20vw;" name="share-social-outline" class="text-2xl"></ion-icon>
+                                                                <ion-icon style="padding-left: 20vw;" class="text-2xl" name="heart-outline"></ion-icon>
                                                                 <span class="text-sm">22</span>
                                                             </div>
                                                         </td>
