--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -175,6 +175,7 @@
             uk-toggle="target: #wrapper ; cls: show-searchbox">
         </div>
     </div>
+</body>
 
     <script>
         new Vue({
