--- a/views/front/loader.ejs
+++ b/views/front/loader.ejs
@@ -3,7 +3,7 @@
 <style>
     img {
         display: block;
-        margin-top: 30vh;
+        margin-top: 40vh;
         margin-left: auto;
         margin-right: auto;
     }
@@ -11,7 +11,7 @@
 
 <div class="preloader" style="position: absolute; z-index: 999999999999999;">
     <div class="text-center" style="width: 100vw; height: 100vh;">
-        <img src="../../newload.png" width="200" height="200" class="center">
+        <img src="../../newload.png" style="width: 90px; height: 90px;" class="center">
     </div>
 </div>
 
@@ -29,7 +29,7 @@
             }
         },
         created(){
-            this.yonlendir()
+            
         }
 
     })
