--- a/views/front/profil.ejs
+++ b/views/front/profil.ejs
@@ -1,21 +1,18 @@
 <% layout("layout") %>
     <div class="main_content">
         <div class="mcontainer">
-            <div class="profile user-profile bg-white rounded-2xl -mt-4">
-                <div class="profiles_banner">
-                    <img src="../../../front/images/avatars/profile-cover.jpg" alt="">
-                </div>
+            <div class="bg-white rounded-2xl -mt-4">
                 <div class="profiles_content">
                     <div class="profile_avatar">
                         <div class="profile_avatar_holder">
-                            <img src="../../../front/images/avatars/avatar-8.jpg" alt="">
+                            <img src="../../../front/images/avatars/avatar-8.jpg" style="border-radius: 100px; height: 100px;">
                         </div>
                         <div class="user_status status_online"></div>
                         <div class="icon_change_photo" hidden>
                             <ion-icon name="camera" class="text-xl"></ion-icon>
                         </div>
                     </div>
-
+                    Abdullah Bektaş
                 </div>
 
                 <div class="flex justify-between lg:border-t flex-col-reverse lg:flex-row">
