--- a/views/front/profil.ejs
+++ b/views/front/profil.ejs
@@ -1,20 +1,27 @@
 <% layout("layout") %>
     <div class="main_content">
         <div class="mcontainer">
-            <div class="bg-white rounded-2xl -mt-4">
-                <div class="profiles_content">
-                    <div class="profile_avatar">
-                        <div class="profile_avatar_holder">
-                            <img src="../../../front/images/avatars/avatar-8.jpg" style="border-radius: 100px; height: 100px;">
-                        </div>
-                        <div class="user_status status_online"></div>
-                        <div class="icon_change_photo" hidden>
-                            <ion-icon name="camera" class="text-xl"></ion-icon>
-                        </div>
-                    </div>
-                
-                </div>
-
+            <div class="bg-white rounded-2xl -mt-4"> 
+                <table>
+                    <tr>
+                        <td>
+                            <div class="profiles_content" style="padding-top: 70px;">
+                                <div class="profile_avatar">
+                                    <div class="profile_avatar_holder">
+                                        <img src="../../../front/images/avatars/avatar-8.jpg" style="border-radius: 100px; height: 100px;">
+                                    </div>
+                                    <div class="user_status status_online"></div>
+                                    <div class="icon_change_photo" hidden>
+                                        <ion-icon name="camera" class="text-xl"></ion-icon>
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <h3 class="text-lg font-semibold" style="padding-left: 20vw; padding-top: 9vh;">Abdullah Bektaş</h3>
+                        </td>
+                    </tr>
+                </table>
                 <div class="flex justify-between lg:border-t flex-col-reverse lg:flex-row">
                     <nav class="cd-secondary-nav pl-2 is_ligh -mb-0.5 border-transparent">
                         <ul>
