--- a/views/front/profil.ejs
+++ b/views/front/profil.ejs
@@ -3,21 +3,27 @@
         <div class="mcontainer">
             <div class="bg-white rounded-2xl -mt-4"> 
                 <div class="profiles_content" style="padding-top: 20px; padding-left: 10px;">
-                    <div class="profile_avatar">
-                        <div class="profile_avatar_holder">
-                            <img src="../../../front/images/avatars/avatar-8.jpg" style="border-radius: 75px; height: 75px;">
-                        </div>
-                        <div class="user_status status_online"></div>
-                        <div class="icon_change_photo" hidden>
-                            <ion-icon name="camera" class="text-xl"></ion-icon>
-                        </div>
-                    </div>
+                    <table>
+                        <tr>
+                            <td><div class="profile_avatar">
+                                <div class="profile_avatar_holder">
+                                    <img src="../../../front/images/avatars/avatar-8.jpg" style="border-radius: 75px; height: 75px;">
+                                </div>
+                                <div class="user_status status_online"></div>
+                                <div class="icon_change_photo" hidden>
+                                    <ion-icon name="camera" class="text-xl"></ion-icon>
+                                </div>
+                            </div></td>
+                            <td style="width: 80vw;"><h3 class="text-lg font-semibold" style="color: crimson; text-align: right;">
+                                ABONE OL
+                            </h3></td>
+                        </tr>
+                    </table>
+                    
                     Abdullah <br>
                     <small>233 Abone</small><br>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-                    <h3 class="text-lg font-semibold" style="color: crimson;">
-                        ABONE OL
-                    </h3>
+                   
                 </div>
                 <div class="flex justify-between lg:border-t flex-col-reverse lg:flex-row">
                     <nav class="cd-secondary-nav pl-2 is_ligh -mb-0.5 border-transparent">
