--- a/views/front/profil.ejs
+++ b/views/front/profil.ejs
@@ -7,14 +7,14 @@
                         <tr>
                             <td><div class="profile_avatar">
                                 <div class="profile_avatar_holder">
-                                    <img src="../../../front/images/avatars/avatar-8.jpg" style="border-radius: 75px; height: 75px;">
+                                    <img src="../../../front/images/avatars/avatar-8.jpg" style="border-radius: 75px; height: 75px; width: 75px;">
                                 </div>
                                 <div class="user_status status_online"></div>
                                 <div class="icon_change_photo" hidden>
                                     <ion-icon name="camera" class="text-xl"></ion-icon>
                                 </div>
                             </div></td>
-                            <td style="width: 80vw;"><h3 class="text-lg font-semibold" style="color: crimson; text-align: right;">
+                            <td style="width: 70vw;"><h3 class="text-lg font-semibold" style="color: crimson; text-align: right;">
                                 ABONE OL
                             </h3></td>
                         </tr>
