--- a/views/front/profil.ejs
+++ b/views/front/profil.ejs
@@ -14,9 +14,11 @@
                                     <ion-icon name="camera" class="text-xl"></ion-icon>
                                 </div>
                             </div></td>
-                            <td style="width: 70vw;"><h3 class="text-lg font-semibold" style="color: crimson; text-align: right;">
-                                ABONE OL
-                            </h3></td>
+                            <td style="width: 70vw;">
+                                <h3 class="text-lg font-semibold" style="color: crimson; text-align: right;">
+                                <span style="color:cornflowerblue;">BAĞIŞ YAP</span> ABONE OL
+                            </h3>
+                        </td>
                         </tr>
                     </table>
                     
