--- a/views/front/profil.ejs
+++ b/views/front/profil.ejs
@@ -16,7 +16,7 @@
                             </div></td>
                             <td style="width: 70vw;">
                                 <h3 class="text-lg font-semibold" style="color: crimson; text-align: right;">
-                                <span style="color:cornflowerblue;">BAĞIŞ YAP</span> ABONE OL
+                                <span style="color:cornflowerblue;">BAĞIŞ YAP </span>| ABONE OL
                             </h3>
                         </td>
                         </tr>
