--- a/views/front/profil.ejs
+++ b/views/front/profil.ejs
@@ -44,10 +44,10 @@
                 <div class="lg:w-12/12 space-y-6">
                     <ul class="space-y-6">
                         <% sozluk.forEach(element => { %>
-                            <li>
+                            <li style="margin-top: 4px;">
                                 <a href="/single/<%= element._id %>">
                                     <div class="flex items-start pl-3 space-x-4">
-                                        <img src="../../../front/images/avatars/avatar-2.jpg" alt="" class="w-16 h-16 rounded-full">
+                                        <img src="../../../front/images/avatars/avatar-2.jpg" style="width: 40px; height: 40px;" class="rounded-full">
                                         <div class="flex-1">
                                             <!-- <h3 class="text-lg font-semibold line-clamp-1"> -->
                                             <h3 class="text-lg font-semibold">
@@ -56,39 +56,36 @@
                                             <p class="text-sm text-gray-400 mb-2"> Yazar: <span data-href="%40tag-dev.html">Abdullah Bektaş</span> |
                                                 <%= moment(element.createdAt,"ddd MMM DD YYYY HH:mm:ss GMT Z'").fromNow(true) %> önce </span>
                                             </p>
-                                            <!-- <p class="leading-6 line-clamp-2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat</p> -->
-                                        </div>
+                                            <div class="row" style="margin-top: -9px; margin-left: 1px;">
+                                                <table>
+                                                    <tr>
+                                                        <td>
+                                                            <div class="flex items-center">
+                                                                <ion-icon name="share-social-outline"></ion-icon>
+                                                                <span class="text-sm">22</span>
+                                                            </div>
+                                                        </td>
+                                                        <td>
+                                                            <div class="flex items-center">
+                                                                <ion-icon style="padding-left: 20vw;" name="heart-outline"></ion-icon>
+                                                                <span class="text-sm">22</span>
+                                                            </div>
+                                                        </td>
+                                                        <td>
+                                                            <div class="flex items-center">
+                                                                <ion-icon style="padding-left: 20vw;" name="chatbubble-ellipses-outline"></ion-icon>
+                                                                <span class="text-sm"><%= element.comment.length %>11 </span>
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                </table>
+                                        </div>                                        
                                     </div>
-                                    <div class="row">
-
-                                        <div class="col-md-12 col-sm-12 col-xs-12" style="width: 18%;">
-                                            <table>
-                                                <tr>
-                                                    <td>
-                                                        <div class="flex items-center space-x-4">
-                                                            <ion-icon style="padding-left: 8vw;" name="share-social-outline" class="text-2xl"></ion-icon>
-                                                            <span class="text-xl">3</span>
-                                                        </div>
-                                                    </td>
-                                                    <td>
-                                                        <div class="flex items-center space-x-4">
-                                                            <ion-icon style="padding-left: 8vw;" name="heart-outline" class="text-2xl"></ion-icon>
-                                                            <span class="text-xl"> 3 </span>
-                                                        </div>
-                                                    </td>
-                                                    <td>
-                                                        <div class="flex items-center space-x-4">
-                                                            <ion-icon style="padding-left: 8vw;" name="chatbubble-ellipses-outline" class="text-2xl"></ion-icon>
-                                                            <span class="text-xl"> <%= element.comment.length %>  </span>
-                                                        </div>
-                                                    </td>
-                                                </tr>
-                                            </table>
-                                        </div>
                                     </div>
+                                    
                                 </a>
                             </li>
-                            <hr style="margin-top: 7px;">
+                            <hr style="margin-top: -0px;">
                             <% }) %>
                     </ul>
                 </div>
