--- a/views/front/profil.ejs
+++ b/views/front/profil.ejs
@@ -22,7 +22,7 @@
                         </tr>
                     </table>
                     
-                    Abdullah <br>
+                    Abdullah <br><hr>
                     <small>233 Abone</small><br>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
                    
