--- a/views/front/profil.ejs
+++ b/views/front/profil.ejs
@@ -27,7 +27,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
                    
                 </div>
-                <div class="flex justify-between lg:border-t flex-col-reverse lg:flex-row">
+                <div class="flex justify-between lg:border-t flex-col-reverse lg:flex-row" style="padding-top: 10px;">
                     <nav class="cd-secondary-nav pl-2 is_ligh -mb-0.5 border-transparent">
                         <ul>
                             <li class="active"><a href="#0"> Paylaşımlar</a></li>
