--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -96,10 +96,10 @@
                             <div class="header_widgets">
                                 <a href="#" class="is_link"> Anasayfa </a>
                                 <a href="#" class="is_link"> Abdullah Bektaş </a>
-                                <a href="#">
+                                <a href="/profil">
                                     <img src="../../../front/images/avatars/avatar-2.jpg" class="is_avatar" alt="">
                                 </a>
-                                <div uk-drop="mode: click;offset:5" class="header_dropdown profile_dropdown">
+                                <!-- <div uk-drop="mode: click;offset:5" class="header_dropdown profile_dropdown">
                                     <a href="timeline.html" class="user">
                                         <div class="user_avatar">
                                             <img src="../../../front/images/avatars/avatar-2.jpg" alt="">
@@ -124,7 +124,7 @@
                                             </path>
                                         </svg> Çıkış Yap
                                     </a>
-                                </div>
+                                </div> -->
                                 <a href="#" id="gizle" class="is_icon">
                                     <svg height="512" viewBox="0 0 512 512" width="512"
                                         xmlns="http://www.w3.org/2000/svg">
