--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -65,8 +65,7 @@
                 <div class="header_wrap">
                     <div class="header_inner mcontainer">
                         <div class="left_side">
-                            <span class="slide_menu" id="gizle"
-                                uk-toggle="target: #wrapper ; cls: is-collapse is-active">
+                                <a class="slide_menu" id="gizle" href="/setting">
                                 <svg id="Layer_1" enable-background="new 0 0 512 512" height="512" viewBox="0 0 512 512"
                                     width="512" xmlns="http://www.w3.org/2000/svg">
                                     <path fill="gray"
@@ -74,7 +73,7 @@
                                     <path fill="gray"
                                         d="m256 367.4c-61.427 0-111.4-49.974-111.4-111.4s49.973-111.4 111.4-111.4 111.4 49.974 111.4 111.4-49.973 111.4-111.4 111.4zm0-192.8c-44.885 0-81.4 36.516-81.4 81.4s36.516 81.4 81.4 81.4 81.4-36.516 81.4-81.4-36.515-81.4-81.4-81.4z" />
                                 </svg>
-                            </span>
+                            </a>
                             <div id="logo">
                                 <a href="/">
                                     <img src="../../../newpan.png" alt="" class="w-32">
