--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -25,7 +25,7 @@
                         </div>
                     </div>
                         <div class="p-4 space-y-3">
-                            <div class="border-t py-4 space-y-4 dark:border-gray-600" style="width: 100%; height: 100vh; overflow-y: scroll;">
+                            <div class="border-t py-4 space-y-4 dark:border-gray-600" style="width: 100%;">
                                 <% konu.comment.forEach(element => { %>
                                     <div class="profiles_content" style="padding-top: 20px; padding-left: 10px;">
                                         <table>
